# arches_example

./: README.md  package.json  pyproject.toml
arches_example/: apps.py
arches_example/data/graphs/resource_models/: Movies.json  Person.json
arches_example/media/js/views/components/plugins/: create-movie-workflow.js
arches_example/migrations/: 0001_install_pkg.py
arches_example/plugins/: create-movie-workflow.json
